include/nvtx3/nvToolsExt.h

#define NVTX_VERSION 3
#define NVTX_EVENT_ATTRIB_STRUCT_SIZE (NVTX_STATIC_CAST(uint16_t, sizeof(nvtxEventAttributes_t)))
typedef uint64_t nvtxRangeId_t;
struct nvtxDomainRegistration_st;
typedef struct nvtxDomainRegistration_st nvtxDomainRegistration;
typedef nvtxDomainRegistration* nvtxDomainHandle_t;
struct nvtxStringRegistration_st;
typedef struct nvtxStringRegistration_st nvtxStringRegistration;
typedef nvtxStringRegistration* nvtxStringHandle_t;
typedef enum nvtxColorType_t
{
    NVTX_COLOR_UNKNOWN  = 0,                 
    NVTX_COLOR_ARGB     = 1                  
} nvtxColorType_t;
typedef enum nvtxMessageType_t
{
    NVTX_MESSAGE_UNKNOWN          = 0,    
    NVTX_MESSAGE_TYPE_ASCII       = 1,    
    NVTX_MESSAGE_TYPE_UNICODE     = 2,     
    NVTX_MESSAGE_TYPE_REGISTERED  = 3     
} nvtxMessageType_t;
typedef union nvtxMessageValue_t
{
    const char* ascii;
    const wchar_t* unicode;
    nvtxStringHandle_t registered;
} nvtxMessageValue_t;
NVTX_DECLSPEC void NVTX_API nvtxInitialize(const void* reserved);
typedef enum nvtxPayloadType_t
{
    NVTX_PAYLOAD_UNKNOWN = 0,   
    NVTX_PAYLOAD_TYPE_UNSIGNED_INT64 = 1,   
    NVTX_PAYLOAD_TYPE_INT64 = 2,   
    NVTX_PAYLOAD_TYPE_DOUBLE = 3,   
    NVTX_PAYLOAD_TYPE_UNSIGNED_INT32 = 4,   
    NVTX_PAYLOAD_TYPE_INT32 = 5,   
    NVTX_PAYLOAD_TYPE_FLOAT = 6    
} nvtxPayloadType_t;
typedef struct nvtxEventAttributes_v2
{
    uint16_t version;
    uint16_t size;
    uint32_t category;
    int32_t colorType;              
    uint32_t color;
    int32_t payloadType;            
    int32_t reserved0;
    union payload_t
    {
        uint64_t ullValue;
        int64_t llValue;
        double dValue;
        uint32_t uiValue;
        int32_t iValue;
        float fValue;
    } payload;
    int32_t messageType;            
    nvtxMessageValue_t message;
} nvtxEventAttributes_v2;
typedef struct nvtxEventAttributes_v2 nvtxEventAttributes_t;
NVTX_DECLSPEC void NVTX_API nvtxDomainMarkEx(nvtxDomainHandle_t domain, const nvtxEventAttributes_t* eventAttrib);
NVTX_DECLSPEC nvtxRangeId_t NVTX_API nvtxDomainRangeStartEx(nvtxDomainHandle_t domain, const nvtxEventAttributes_t* eventAttrib);
NVTX_DECLSPEC void NVTX_API nvtxDomainRangeEnd(nvtxDomainHandle_t domain, nvtxRangeId_t id);
NVTX_DECLSPEC int NVTX_API nvtxDomainRangePushEx(nvtxDomainHandle_t domain, const nvtxEventAttributes_t* eventAttrib);
NVTX_DECLSPEC int NVTX_API nvtxDomainRangePop(nvtxDomainHandle_t domain);
NVTX_DECLSPEC void NVTX_API nvtxDomainNameCategoryA(nvtxDomainHandle_t domain, uint32_t category, const char* name);
NVTX_DECLSPEC nvtxStringHandle_t NVTX_API nvtxDomainRegisterStringA(nvtxDomainHandle_t domain, const char* string);
NVTX_DECLSPEC nvtxDomainHandle_t NVTX_API nvtxDomainCreateA(const char* name);
NVTX_DECLSPEC void NVTX_API nvtxDomainDestroy(nvtxDomainHandle_t domain);