tools/nvtxw/rs/src/nvtxw-sys/include/nvtx3/nvToolsExtPayload.h

#define NVTX_PAYLOAD_TYPE_EXT ((int32_t)0xDFBD0009)
#define NVTX_PAYLOAD_ENTRY_FLAG_UNUSED 0
#define NVTX_PAYLOAD_ENTRY_FLAG_ARRAY_FIXED_SIZE           (1 << 4)
#define NVTX_PAYLOAD_ENTRY_FLAG_ARRAY_LENGTH_INDEX         (3 << 4)
#define NVTX_PAYLOAD_ENTRY_FLAG_EVENT_MESSAGE      (1 << 10)
#define NVTX_PAYLOAD_ENTRY_FLAG_RANGE_BEGIN        (1 << 12)
#define NVTX_PAYLOAD_ENTRY_FLAG_RANGE_END          (2 << 12)
#define NVTX_PAYLOAD_ENTRY_FLAG_MARK               (3 << 12)
#define NVTX_PAYLOAD_ENTRY_FLAG_COUNTER            (4 << 12)
#define NVTX_PAYLOAD_ENTRY_TYPE_INVALID     0
#define NVTX_PAYLOAD_ENTRY_TYPE_INT8       11
#define NVTX_PAYLOAD_ENTRY_TYPE_UINT8      12
#define NVTX_PAYLOAD_ENTRY_TYPE_INT16      13
#define NVTX_PAYLOAD_ENTRY_TYPE_UINT16     14
#define NVTX_PAYLOAD_ENTRY_TYPE_INT32      15
#define NVTX_PAYLOAD_ENTRY_TYPE_UINT32     16
#define NVTX_PAYLOAD_ENTRY_TYPE_INT64      17
#define NVTX_PAYLOAD_ENTRY_TYPE_UINT64     18
#define NVTX_PAYLOAD_ENTRY_TYPE_BYTE       32
#define NVTX_PAYLOAD_ENTRY_TYPE_FLOAT16    42
#define NVTX_PAYLOAD_ENTRY_TYPE_FLOAT32    43
#define NVTX_PAYLOAD_ENTRY_TYPE_FLOAT64    44
#define NVTX_PAYLOAD_ENTRY_TYPE_FLOAT128   45
#define NVTX_PAYLOAD_ENTRY_TYPE_CATEGORY   68 
#define NVTX_PAYLOAD_ENTRY_TYPE_COLOR_ARGB 69 
#define NVTX_PAYLOAD_ENTRY_TYPE_SCOPE_ID   70 
#define NVTX_PAYLOAD_ENTRY_TYPE_CSTRING_UTF32 78
#define NVTX_PAYLOAD_ENTRY_TYPE_NVTX_REGISTERED_STRING_HANDLE 80
#define NVTX_PAYLOAD_SCHEMA_TYPE_STATIC                       1
#define NVTX_PAYLOAD_SCHEMA_TYPE_DYNAMIC                      2
#define NVTX_PAYLOAD_SCHEMA_FLAG_COUNTER_GROUP  (1 << 3)
#define NVTX_SCOPE_NONE                    0 
#define NVTX_SCOPE_ROOT                    1 
#define NVTX_SCOPE_CURRENT_HW_MACHINE      2 
#define NVTX_SCOPE_CURRENT_HW_SOCKET       3
#define NVTX_SCOPE_CURRENT_HW_CPU_PHYSICAL 4 
#define NVTX_SCOPE_CURRENT_HW_CPU_LOGICAL  5 
#define NVTX_SCOPE_CURRENT_HW_INNERMOST   15
#define NVTX_SCOPE_CURRENT_HYPERVISOR     16
#define NVTX_SCOPE_CURRENT_VM             17
#define NVTX_SCOPE_CURRENT_KERNEL         18
#define NVTX_SCOPE_CURRENT_CONTAINER      19
#define NVTX_SCOPE_CURRENT_OS             20
#define NVTX_SCOPE_CURRENT_SW_PROCESS     21 
#define NVTX_SCOPE_CURRENT_SW_THREAD      22 
#define NVTX_SCOPE_CURRENT_SW_INNERMOST   31
typedef struct nvtxPayloadData_v1
{
    uint64_t    schemaId;
    size_t      size;
    const void* payload;
} nvtxPayloadData_t;
typedef struct nvtxSemanticsHeader_v1
{
    uint32_t structSize; 
    uint16_t semanticId;
    uint16_t version;
    const struct nvtxSemanticsHeader_v1* next; 
} nvtxSemanticsHeader_t;
typedef struct nvtxPayloadSchemaEntry_v1
{
    uint64_t       flags;
    uint64_t       type;
    const char*    name;
    const char*    description;
    uint64_t       arrayOrUnionDetail;
    uint64_t       offset;
    const nvtxSemanticsHeader_t* semantics;
    const void*    reserved;
} nvtxPayloadSchemaEntry_t;
typedef struct nvtxPayloadSchemaAttr_v1
{
    uint64_t                        fieldMask;
    const char*                     name;
    uint64_t                        type;
    uint64_t                        flags;
    const nvtxPayloadSchemaEntry_t* entries;
    size_t                          numEntries;
    size_t                          payloadStaticSize;
    size_t                          packAlign;
    uint64_t                        schemaId;
    void*                           extension;
} nvtxPayloadSchemaAttr_t;
typedef struct nvtxScopeAttr_v1
{
    size_t structSize;
    const char* path;
    uint64_t parentScope;
    uint64_t scopeId;
} nvtxScopeAttr_t;
NVTX_DECLSPEC uint64_t NVTX_API nvtxPayloadSchemaRegister(
    nvtxDomainHandle_t domain,
    const nvtxPayloadSchemaAttr_t* attr);
NVTX_DECLSPEC uint64_t NVTX_API nvtxScopeRegister(
    nvtxDomainHandle_t domain,
    const nvtxScopeAttr_t* attr);
NVTX_DECLSPEC uint8_t NVTX_API nvtxDomainIsEnabled(
    nvtxDomainHandle_t domain);